<resources>
    <string name="app_name">SAMS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_reset_profile">Reset Profile</string>
    <string name="signup_prompt">No account yet? Create one</string>
    <string name="login_button">Login</string>
    <string name="reset_button">Reset Password</string>
    <string name="action_logout">Logout</string>
    <string name="update_profile_button">Update Profile</string>
    <string name="input_name">Name</string>
    <string name="input_roll_no">Roll No.</string>
    <string name="input_sessionFrom">Session Start Year</string>
    <string name="inout_sessionTo">Session End Year</string>
    <string name="input_eventName">Event Name</string>
    <string name="input_eventDate">Event Date</string>
    <string name="input_titleAwarded">Title Awarded</string>
    <string name="input_eventVenue">Event Venue</string>
    <string name="input_eventDescription">Event Description</string>
    <string name="checkbox_participated">Participated</string>
    <string name="checkbox_organized">Organised</string>
    <string name="btn_image">Select Image</string>
    <string name="btn_submit">Submit</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="tab_text_1">Approved</string>
    <string name="tab_text_2">Unapproved</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login">Login</string>
    <string name="add_achievement">Add Achievement</string>
    <string name="action_search">Search</string>
    <string name="title_activity_home">Home</string>
    <string name="tab_text_3">Academics</string>
    <string name="action_teacher_achievement">Teacher Achievement</string>
    <string name="tab_text_5">My Achievements</string>
    <string name="tab_text_6">All Achievements</string>
    <string name="action_student_dashboard">Student Dashboard</string>
    <string name="title_activity_teacher_achievement">Teacher Achievements</string>
    <string name="input_topic">Topic</string>
    <string name="input_description">Description</string>
    <string name="input_published">Published</string>
    <string name="input_date">Date</string>
    <string name="input_place">Place</string>
    <string name="checkbox_international">International</string>
    <string name="checkbox_sponsored">Sponsored</string>
    <string name="checkbox_reviewed">Reviewed</string>
    <string name="checkbox_msi">MSI</string>
    <string name="delete_teacher_achievement">Delete Teacher Achievement</string>
    <string name="teacher_achievement_details_msi">MSI: </string>
    <string name="teacher_achievement_details_reviewed">Reviewed: </string>
    <string name="teacher_achievement_details_sponsored">Sponsored: </string>
    <string name="teacher_achievement_details_international">International: </string>
    <string name="teacher_achievement_details_place">Place: </string>
    <string name="teacher_achievement_details_date">Date: </string>
    <string name="teacher_achievement_details_published">Published: </string>
    <string name="teacher_achievement_details_subtype">Sub Type: </string>
    <string name="teacher_achievement_details_type">Type: </string>
    <string name="teacher_achievement_details_description">Description: </string>
    <string name="teacher_achievement_details_topic">Topic: </string>
    <string name="teacher_achievement_details_userid">UserID: </string>

</resources>
