<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.DashboardActivity">
    <item
        android:id="@+id/action_dashboard_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dashboard_teacher_achievement"
        android:orderInCategory="100"
        android:title="@string/action_teacher_achievement"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dashboard_reset_password"
        android:title="@string/action_reset_password"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dashboard_reset_profile"
        android:title="@string/action_reset_profile"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_dashboard_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>